CPG-DEV/src/objects/Plant_Location_Product__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>US50</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipLabel>Plant Location Products</relationshipLabel>
        <relationshipName>Plant_Location_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products at Plant Location</relationshipLabel>
        <relationshipName>Plant_Location_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Location</label>
        <referenceTo>Plant_Location__c</referenceTo>
        <relationshipLabel>Plant Location Products</relationshipLabel>
        <relationshipName>Plant_Location_Producta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>US50</description>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Plant Location Product</label>
    <nameField>
        <label>Plant Location Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Location Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>